tests/neg-custom-args/captures/reference-cc.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reference-cc.scala:44:29 ---------------------------------
44 |  val later = usingLogFile { file => () => file.write(0) } // error
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |Capability `file` outlives its scope: it leaks into outer capture set 's1 which is owned by value later.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (file: java.io.FileOutputStream^) ->'s2 () ->{file} Unit
   |Required: java.io.FileOutputStream^ => () ->'s1 Unit
   |
   |where:    => refers to a root capability created in value later when checking argument to parameter op of method usingLogFile
   |          ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reference-cc.scala:47:25 ---------------------------------
47 |  val xs = usingLogFile: f => // error
   |                         ^
   |Capability `f` outlives its scope: it leaks into outer capture set 's3 which is owned by value xs.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (f: java.io.FileOutputStream^) ->'s4 LzyList[Int]^{f}
   |Required: java.io.FileOutputStream^ => LzyList[Int]^'s3
   |
   |where:    => refers to a root capability created in value xs when checking argument to parameter op of method usingLogFile
   |          ^  refers to the root capability caps.any
   |
48 |    LzyList(1, 2, 3).map { x => f.write(x); x * x }
   |
   | longer explanation available when compiling with `-explain`
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/reference-cc.scala:58:22 -------------------------------
58 |    try () => xs.map(f).sum  // error TODO improve error message
   |                      ^
   |                      Reference `canThrow$1` is not included in the allowed capture set {any}
   |                      of an enclosing function literal with expected type () => Double.
   |
   |                      where:    any is a root capability in the result type of method escaped
